Day 2 Commit 4 Table for IE 11 fixed , border is visible by removing display:inline-block and making margin:0 auto

--- a/css/contactsite.css
+++ b/css/contactsite.css
@@ -61,10 +61,10 @@ p{
 
 table{
 	
-	margin:2px;
+	margin: 0 auto;
 	width:200px;
 	padding:4px;
-	display:inline-block;
+	
 }
 table tr td{
 	font-weight:bold;
